United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6932496 c1: deoptimization of jsr subroutine fails on sparcv9
6932496 : c1: deoptimization of jsr subroutine fails on sparcv9

Details
Type:
Bug
Submit Date:
2010-03-05
Status:
Resolved
Updated Date:
2010-09-24
Project Name:
JDK
Resolved Date:
2010-03-24
Component:
hotspot
OS:
solaris_10
Sub-Component:
compiler
CPU:
sparc
Priority:
P4
Resolution:
Fixed
Affected Versions:
hs19
Fixed Versions:
hs18

Related Reports
Backport:
Backport:
Backport:
Backport:
Relates:

Sub Tasks

Description
The problem happens on a deoptimization between a jsr bytecode and a ret bytecode. The compiler always stores the bci to return to (a local variable) in the debug information it generates as a constant 32 bit integer but the interpreter loads it from the local variables in the ret bytecode as a 32 bit or 64 bit integer depending on whether the VM is 32 or 64 bits.

Found during JRTS 2.2u1 testing.

                                    

Comments
EVALUATION

ChangeSet=http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/c466efa608d5,ChangeRequest=6932496
                                     
2010-03-10
EVALUATION

See description.
                                     
2010-03-05



Hardware and Software, Engineered to Work Together